--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using WebShopCafe
-@namespace WebShopCafe.Pages
+﻿@using WebShopCafe
+@using WebShopCafe.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
